# quietus

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  README_ZH.md
package/: CMakeLists.txt
package/debian/: changelog  copyright  quietus.desktop
src/: CMakeLists.txt  appConfig.hpp.in  assets.qrc  core.cpp  core.hpp  main.cpp
src/i18n/: app_zh_CN.qm  app_zh_CN.ts
src/links/: favorite.cpp  favorite.hpp
src/models/: browserWebsite.cpp  browserWebsite.hpp  favorite.cpp  favorite.hpp  website.cpp  website.hpp
src/network/: faviconManager.cpp  faviconManager.hpp
src/persistence/: favorite.cpp  favorite.hpp  persistence.cpp  persistence.hpp  website.cpp  website.hpp
src/utils/: common.cpp  common.hpp
src/widgets/: AddEditFavoriteGroupDialog.qml  AdjustingMask.qml  Browser.qml  EventBus.qml  Favorite.qml  FavoriteDialog.qml  FavoriteGroup.qml  FavoriteGroups.qml  Window.qml  quietus.cpp  quietus.hpp
